--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.446.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
+    "pino-pretty": "^13.0.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
